--- a/fsmodule/home.html
+++ b/fsmodule/home.html
@@ -7,9 +7,20 @@
     <title>Document</title>
 
     <style>
+
+        body{
+            box-sizing: border-box;
+            background-color: aliceblue;
+        }
         
         h1{
-            
+            display: block;
+            margin: 0 auto;
+            width: 200px;
+            background-color: #000000;
+            color: #fff;
+            font-size: 30px;
+            text-align: center;
         }
     </style>
 
